// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app integration integration with sideboard click 1`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\">Translation</button><button id=\\"rotation-button\\" class=\\"tab-button\\">Rotation</button><button id=\\"reflection-button\\" class=\\"tab-button\\">Reflection</button></nav>
        <div id=\\"translation\\" class=\\"tab\\">
          <div class=\\"controls\\"><input name=\\"setTranslationFactor\\" type=\\"number\\" min=\\"0\\" max=\\"18\\" id=\\"factorBox\\" value=\\"1\\"><button name=\\"up\\" alt=\\"up button\\" id=\\"up\\" class=\\"arrow button\\"><svg>btnTransArrow_crop.svg</svg></button><button name=\\"left\\" alt=\\"left button\\" id=\\"left\\" class=\\"arrow button\\"><svg>btnTransArrow_crop.svg</svg></button><button name=\\"right\\" alt=\\"right button\\" id=\\"right\\" class=\\"arrow button\\"><svg>btnTransArrow_crop.svg</svg></button><button name=\\"down\\" alt=\\"down button\\" id=\\"down\\" class=\\"arrow button\\"><svg>btnTransArrow_crop.svg</svg></button></div>
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"1\\"><img src=\\"rotate-arrow.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"2\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"3\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"4\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div><button>CLEAR</button><button>RUN</button>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration integration with sideboard click 2`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\">Translation</button><button id=\\"rotation-button\\" class=\\"tab-button\\">Rotation</button><button id=\\"reflection-button\\" class=\\"tab-button\\">Reflection</button></nav>
        <div id=\\"rotation\\" class=\\"tab\\">
          <h1>Rotation</h1><img id=\\"rotate-left\\" alt=\\"left rotation button\\" src=\\"rotate-arrow.svg\\"><input type=\\"number\\" name=\\"setPivotPointx\\" value=\\"0\\"><input type=\\"number\\" name=\\"setPivotPointy\\" value=\\"0\\"><img id=\\"rotate-right\\" alt=\\"right rotation button\\" src=\\"rotate-arrow.svg\\"><select id=\\"rotateDrop\\" name=\\"setRotationMag\\">
            <option>90°</option>
            <option>180°</option>
            <option>270°</option>
          </select>
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"1\\"><img src=\\"rotate-arrow.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"2\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"3\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"4\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div><button>CLEAR</button><button>RUN</button>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration integration with sideboard click 3`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"fade-out\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\">Translation</button><button id=\\"rotation-button\\" class=\\"tab-button\\">Rotation</button><button id=\\"reflection-button\\" class=\\"tab-button\\">Reflection</button></nav>
        <div class=\\"tab\\">
          <h1>Reflection</h1><img name=\\"ReflectX\\" src=\\"rotate-arrow.svg\\"><select id=\\"reflectDrop\\" name=\\"setLineOfReflection\\">
            <option>-9</option>
            <option>-8</option>
            <option>-7</option>
            <option>-6</option>
            <option>-5</option>
            <option>-4</option>
            <option>-3</option>
            <option>-2</option>
            <option>-1</option>
            <option>0</option>
            <option>1</option>
            <option>2</option>
            <option>3</option>
            <option>4</option>
            <option>5</option>
            <option>6</option>
            <option>7</option>
            <option>8</option>
            <option>9</option>
          </select><img name=\\"ReflectY\\" src=\\"rotate-arrow.svg\\">
        </div>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"1\\"><img src=\\"rotate-arrow.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"2\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"3\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"4\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div><button>CLEAR</button><button>RUN</button>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;

exports[`app integration render app 1`] = `
"<div class=\\"App\\">
  <main>
    <div class=\\"canvasWrapper\\">
      <div class=\\"grid\\"><canvas id=\\"myGrid\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"endPtCircle\\"><canvas id=\\"myEndPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
      <div class=\\"Circle\\"><canvas id=\\"myStartPt\\" width=\\"2000\\" height=\\"2000\\"></canvas></div>
    </div>
    <div class=\\"controlerWrapper\\">
      <div id=\\"sideboard\\">
        <nav><button id=\\"translation-button\\" class=\\"tab-button\\">Translation</button><button id=\\"rotation-button\\" class=\\"tab-button\\">Rotation</button><button id=\\"reflection-button\\" class=\\"tab-button\\">Reflection</button></nav>
      </div>
      <div class=\\"call-stack\\">
        <div class=\\"calling-card\\" id=\\"1\\"><img src=\\"rotate-arrow.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"2\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"3\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div>
        <div class=\\"calling-card\\" id=\\"4\\"><img src=\\"kuba_arrow_button_set_1.svg\\">description<button>X</button></div><button>CLEAR</button><button>RUN</button>
      </div>
    </div>
    <div></div>
  </main>
</div>"
`;
